--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -65,7 +65,9 @@
     </activity>
 
 
-
+<meta-data
+  android:name="com.google.android.gms.wallet.api.enabled"
+   android:value="true" />
 
     </application>
 </manifest>
